--- a/feedback.html
+++ b/feedback.html
@@ -7,5 +7,31 @@
 </head>
 <body>
     <h1>Feedback Form</h1>
+    <form action="index.html" method="post">
+        <table>
+            <tr>
+                <td><label>Name</label></td>
+                <td><input type="text"></td>
+            </tr>
+            <tr>
+                <td><label>Email</label></td>
+                <td><input type="email"></td>
+            </tr>
+            <tr>
+                <td><label>Comment</label></td>
+                <td><textarea name="" id="" rows="5" cols="50"></textarea></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td><input type="submit"></td>
+            </tr>
+
+        </table>
+        
+
+
+
+
+    </form>
 </body>
 </html>
