--- a/index.html
+++ b/index.html
@@ -7,16 +7,22 @@
 </head>
 <body>
     <h1>Table of contents</h1>
+    <ul>
+        <a href="#overview"><li>Overview</li></a>
+        <a href="#scope"><li>Scope</li></a>
+        <a href="#timeline"><li>Timeline</li></a>
+        <a href="feedback.html"><li>Feedback</li></a>
+    </ul>
     <hr>
-    <img src="image/w.png" alt="missing" height="50%" width="50%">
+    <img src="image/missing.png" alt="missing" height="50%" width="50%">
     <h2 style ="color:blue">1.0 Introduction</h2>
     <p>this final year project is to<br>evaluate the student skills and talent</p>
-    <h3>1.1 overview</h3>
+    <h3 id="overview">1.1 overview</h3>
     <p>   <b>Across schools all over the world,</b> 
         <i>quizzes play a vital role in assessing the knowledge</i> and understanding of students in a teachers class. As a result there is a growing need for efficient, scalable, and engaging assessment tools. Many teachers have a hard time managing their quizzes which can lead to inefficiencies, such as time-consuming manual grading, limited question variety, and inconsistent difficulty levels. This has resulted in a demand for a easier way to manage quizzes. 
 
         This project aims to solve this by providing a digital platform designed to streamline the process of creating, managing, delivering, and grading quizzes using ai technology. By leveraging advanced AI technologies this project aims to improve the learning experience of teachers and students by offering a intuitive interface for teachers to build and customize quizzes, control difficulty levels, and set grading criteria and deliver a engaging, adaptive, and effective learning experiences as well as obtain results and receive feedback for students.  </p>
-    <h3 style ="color:blue">1.2 scope</h3>
+    <h3 id="scope" style ="color:blue">1.2 scope</h3>
     <ol>
     <li>Automate the creation of quizzes using an ai that can generate quizzes based on a given syllabus or topic, ensuring a variety of question types (multiple choice, true/false, short answer, etc.).</li>
     <li>Implement a adaptive learning algorithms that can adapt and change difficulty depending on a student needs.</li>
@@ -25,23 +31,23 @@
     </ul><li>Design a security system that can detect and prevent cheating and maintain the integrity of the quizzes</li>
     <li>Design a system that can handle a large number of users and quizzes simultaneously without performance issues.</li>
      </ol>   
-     <h3 style ="color:blue">1.3 Timeline</h3>
+     <h3 id="timeline" style ="color:blue">1.3 Timeline</h3>
      <p>Below are the timeline</p>
      <table border="4">
         <thead>
-            <th rowspan="2">Activities</th>
-            <th colspan="6">Months</th>
-            
+            <tr>
+                <th rowspan="2">Activities</th>
+                <th colspan="6">Months</th>
+            </tr>
+            <tr>
+                <th>jan</th>
+                <th>feb</th>
+                <th>mar</th>
+                <th>apr</th>
+                <th>jun</th>
+                <th>july</th>
+            </tr>
         </thead>
-        <tr>
-            <td></td>
-            <td>jan</td>
-            <td>feb</td>
-            <td>mar</td>
-            <td>apr</td>
-            <td>jun</td>
-            <td>july</td>
-        </tr>
         <tr>
             <td>something</td>
             <td>✔</td>
